--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,20 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css"
+    />
   </head>
   <body>
     <app-root></app-root>
+    <a
+      class="github-fork-ribbon"
+      href="https://github.com/nartc/ngt-cube-heap"
+      data-ribbon="Check code on GitHub"
+      title="Check code on GitHub"
+    >
+      Check code on GitHub
+    </a>
   </body>
 </html>
